# Confidential-Assurance-Protocol

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WEBUI_BACKEND_STATUS.md  tarpaulin.toml
agent/: .clippy.toml  .dockerignore  .gitignore  CAP_ROADMAP_TODO.md  CI_TEST_PLAN.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  LINT_POLICY.md  PACKAGE_FLOW_REFACTORING_COMPLETE.md  PHASE1_STATUS_REPORT.md  README_DEPLOYMENT.md  REFACTORING_GUIDE.md  TEST_OVERVIEW.md  TODO_REFACTORING.md  WEEK5_SUMMARY.md  WEEK6_SUMMARY.md  audit.toml  compile-policy-v2.sh  docker-compose.yml  grafana-dashboard.json  openapi.yaml  prometheus.yml  setup-webui-verification.sh  test-compile-raw.sh  test-docker.sh  test-policy-compile.sh
agent/.cargo/: audit.toml
agent/.github/workflows/: docker-build-push.yml  policy-compiler.yml  security.yml
agent/benches/: compile_bench.rs  registry_bench.rs
agent/ci/: non_determinism_check.sh
agent/config/: app.yaml  auth.yaml  tls.yaml
agent/docs/: CLAUDE.md  CLI_REFACTORING_REPORT.md  CODE_QUALITY_MASTER_REPORT.md  GETTING_STARTED.md  MANAGING_LINT_WARNINGS.md  ORR_Checklist.md  REFACTORING_ROADMAP.md  SAP_Adapter_Pilot_E2E.md  TAG3_SYSTEMARCHITEKTUR.md  TAG4_SYSTEMARCHITEKTUR.md  VERIFIER_REFACTORING_REPORT.md  Week5_SLOs.md  bundle_v2_spec.md  ir_v1.md  manifest.schema.json  runbook_restore.md  zk-schema.v1.md
agent/docs/deployment/: DEPLOYMENT.md  _analysis_consolidation.md  _strategy_consolidation.md  _testing_plan.md  _testing_report.md
agent/docs/desktop-ui/: RUST_CORE_STATUS.md
agent/docs/development/: MIGRATION_NOTES.md
agent/docs/guides/: GITHUB_PUSH_GUIDE.md  QUICK_START.md
agent/docs/phases/: PHASE1_DECISION_TLS.md
agent/docs/testing/: TEST_REPORT.md
agent/examples/: adapt_context.json  generate_correct_token.rs  generate_mock_token.rs  jurisdictions.csv  lksg_v1.ir.json  lksg_v1.policy.yml  policy.lksg.v1.yml  policy.lksg.v2.yml  sanctions.csv  suppliers.csv  ubos.csv
agent/helm/: values-dev.yaml  values-prod.yaml  values-stage.yaml  values.yaml
agent/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  serviceaccount.yaml
agent/k6/: README.md  verify.js
agent/k8s/: deployment.yaml  ingress.yaml  networkpolicy.yaml
agent/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
agent/lists/: eu_sanctions.csv  highrisk.csv
agent/migrations/: 001_create_policies_table.sql
agent/monitoring/: grafana-dashboard-week6.json  test-monitoring.sh
agent/monitoring/jaeger/: jaeger-config.yml
agent/monitoring/promtail/: promtail-config.yml
agent/monitoring/slo/: README.md  slo-config.yml
agent/openapi/: openapi.yaml
agent/reports/: cap-agent.cdx.json
agent/schemas/: README.md  ir_v1.schema.json  policy_v2.schema.json
agent/scripts/: backup.sh  check-api-policy.sh  check-policy-store.sh  compile-policy-v2-for-webui.sh  deploy-smoke-test.sh  install-docker.sh  key_rotate.sh  lint-report.sh  prepare-verification.sh  restore.sh  smoke_prod.sh  test-ci-pipeline.sh  test-compile-json.sh  test-policy-full.sh  test-verification.sh  test-webui-verify.sh
agent/src/: audit.rs  blob_store.rs  commitment.rs  error.rs  io.rs  keys.rs  lib.rs  main.rs  manifest.rs  package_verifier.rs  policy.rs  proof_engine.rs  proof_mock.rs  registry.rs  sign.rs  verifier.rs  zk_system.rs
agent/src/api/: auth.rs  metrics_middleware.rs  mod.rs  policy.rs  policy_compiler.rs  rate_limit.rs  tls.rs  upload.rs  verify.rs
agent/src/audit/: hash_chain.rs  mod.rs  traits.rs  v1_0.rs
agent/src/auth/: errors.rs  mod.rs
agent/src/bundle/: export.rs  format.rs  meta.rs  mod.rs  source.rs
agent/src/cli/: audit.rs  blob.rs  bundle.rs  keys.rs  manifest.rs  mod.rs  output.rs  paths.rs  policy.rs  prepare.rs  proof.rs  registry.rs  sign.rs  verifier.rs
agent/src/crypto/: mod.rs
agent/src/http/: mod.rs
agent/src/lists/: jurisdictions.rs  mod.rs  sanctions.rs
agent/src/manifest/: anchor.rs  io.rs  mod.rs  signed.rs  types.rs
agent/src/metrics/: mod.rs
agent/src/orchestrator/: drift_analysis.rs  enforcer.rs  metrics.rs  mod.rs  planner.rs  selector.rs
agent/src/package_verifier/: mod.rs  summary.rs  types.rs  validation.rs  verifier.rs
agent/src/policy/: in_memory.rs  metadata.rs  mod.rs  sqlite.rs  store.rs  types.rs
agent/src/policy_v2/: cli.rs  hasher.rs  ir.rs  linter.rs  mod.rs  types.rs  yaml_parser.rs
agent/src/proof/: capz.rs  mod.rs
agent/src/providers/: cloudkms.rs  key_provider.rs  mod.rs  pkcs11.rs  software.rs
agent/src/registry/: api.rs  entry.rs  migrate.rs  mod.rs  schema.rs  signing.rs  store.rs  timestamp.rs  v1_0.rs
agent/src/tls/: mod.rs
agent/src/verifier/: constants.rs  (+6 more)
agent/tests/: adapter_pilot.rs  audit_chain_it.rs  audit_chain_tamper.rs  audit_chain_unit.rs  auth_jwt.rs  backup_restore.rs  enforcer_cli.rs  enforcer_metrics.rs  golden_ir.rs  key_provider_unit.rs  metrics_export.rs  orchestrator_enforce.rs  registry_compat.rs  registry_migration.rs  rotation.rs  test_auth.rs  test_bundle_v2.rs  test_bundle_verifier_cli.rs  test_cli_e2e_workflow.rs  test_commitment.rs  test_complete_e2e_workflow.rs.disabled  test_dual_anchor.rs  test_hash_validation.rs  test_integration_http.rs  test_io.rs  test_lru_cache.rs  test_manifest.rs  test_metrics_middleware.rs  test_orchestrator.rs  test_policy_determinism.rs  test_policy_store.rs  test_registry_key_chain.rs  test_registry_sqlite.rs  test_sign.rs  test_timestamp_provider.rs  test_tls.rs  test_verify_bundle.rs  test_zip_creation.rs  test_zk_backend.rs  tls_mtls.rs
sap-adapter/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  context_new.json
sap-adapter/config/: adapter.yaml
sap-adapter/examples/: context_demo.json  suppliers.json  suppliers_demo.json
sap-adapter/src/: lib.rs  main.rs  mapper.rs  odata_client.rs  sanitizer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audit_logger.rs  lib.rs  main.rs  security.rs  settings.rs  types.rs
(+287 files in other folders)
