[package]
name = "cap-agent"
version = "0.1.0"
edition = "2021"

[features]
default = []
pkcs11 = []
cloudkms = []

[lib]
name = "cap_agent"
path = "src/lib.rs"

[[bin]]
name = "cap-agent"
path = "src/main.rs"

[[bin]]
name = "cap-verifier-api"
path = "src/bin/verifier_api.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
chrono = "0.4"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
jsonschema = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
wasmtime = "38.0"
zip = "2.1"
# REST API dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower_governor = "0.4"
governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# TLS dependencies (Phase 1)
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
# OAuth2 dependencies
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }
reqwest = { version = "0.11", features = ["json"] }
# LRU Cache (Week 4)
lru = "0.12"
# Prometheus metrics (Week 6)
prometheus = { version = "0.13", default-features = false }
once_cell = "1.19"
# Policy Store dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
# OpenAPI/Swagger UI
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rsa = { version = "0.9", features = ["sha2"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[[bench]]
name = "registry_bench"
harness = false

[[bench]]
name = "compile_bench"
harness = false

# Clippy Lint Configuration
# Allow intentional patterns that are common in this codebase
[lints.clippy]
# Allow zombie processes in integration tests (intentional pattern)
zombie_processes = "allow"
# Allow explicit borrows for API clarity
needless_borrows_for_generic_args = "allow"
# Allow existing file operations (backward compatibility)
suspicious_open_options = "allow"
# Allow let-and-return in benchmarks for readability
let_and_return = "allow"
