[package]
name = "cap-agent"
version = "0.1.0"
edition = "2021"

[features]
default = ["api-server"]
api-server = [
    "dep:axum",
    "dep:axum-server",
    "dep:axum-extra",
    "dep:tower",
    "dep:tower-http",
    "dep:tower_governor",
    "dep:governor",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio-rustls",
    "dep:jsonwebtoken",
    "dep:reqwest",
    "dep:utoipa-swagger-ui",
]
pkcs11 = []
cloudkms = []

[lib]
name = "cap_agent"
path = "src/lib.rs"

[[bin]]
name = "cap-agent"
path = "src/main.rs"

[[bin]]
name = "cap-verifier-api"
path = "src/bin/verifier_api.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
chrono = "0.4"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
jsonschema = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
wasmtime = "38.0"
zip = "2.1"
# REST API dependencies (optional - only needed for api-server feature)
axum = { version = "0.7", features = ["multipart"], optional = true }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors"], optional = true }
tower_governor = { version = "0.4", optional = true }
governor = { version = "0.6", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
# TLS dependencies (Phase 1)
axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
tokio-rustls = { version = "0.24", optional = true }
# OAuth2 dependencies
jsonwebtoken = { version = "9.2", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
# LRU Cache (Week 4)
lru = "0.12"
# Prometheus metrics (Week 6)
prometheus = { version = "0.13", default-features = false }
once_cell = "1.19"
# Policy Store dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
# OpenAPI/Swagger UI
utoipa-swagger-ui = { version = "6.0", features = ["axum"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rsa = { version = "0.9", features = ["sha2"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[[bench]]
name = "registry_bench"
harness = false

[[bench]]
name = "compile_bench"
harness = false

# Clippy Lint Configuration
# Allow intentional patterns that are common in this codebase
[lints.clippy]
# Allow zombie processes in integration tests (intentional pattern)
zombie_processes = "allow"
# Allow explicit borrows for API clarity
needless_borrows_for_generic_args = "allow"
# Allow existing file operations (backward compatibility)
suspicious_open_options = "allow"
# Allow let-and-return in benchmarks for readability
let_and_return = "allow"
