[package]
name = "cap-agent"
version = "0.2.0"
edition = "2021"
description = "CAP Agent - Minimal Local Agent for Cryptographic Audit Proofs"

[features]
default = []
pkcs11 = []    # HSM support (future)
cloudkms = []  # Cloud KMS support (future)

[lib]
name = "cap_agent"
path = "src/lib.rs"

[[bin]]
name = "cap-agent"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Cryptography
blake3 = "1.5"
sha3 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# Data handling
chrono = "0.4"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Validation
jsonschema = "0.17"

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Bundle format
zip = "2.1"

# Error handling
anyhow = "1.0"

# Async (minimal, for SQLite)
tokio = { version = "1.35", features = ["rt", "macros"] }
async-trait = "0.1"

# Caching
lru = "0.12"

# Metrics (minimal, for internal stats)
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[[bench]]
name = "registry_bench"
harness = false

[[bench]]
name = "compile_bench"
harness = false

# Clippy Lint Configuration
[lints.clippy]
zombie_processes = "allow"
needless_borrows_for_generic_args = "allow"
suspicious_open_options = "allow"
let_and_return = "allow"
