[package]
name = "sap-adapter"
version = "0.3.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Hashing
blake3 = "1.5"

# HTTP Client (with TLS support)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# URL encoding for OData queries
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = "0.4"
