[package]
name = "desktop-proofer"
version = "0.1.0"
description = "CAP Desktop Proofer - Offline-First Proof Verification"
authors = ["CAP Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desktop_proofer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Cryptography
blake3 = "1"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4"] }

# Platform directories (for default workspace path)
dirs = "5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# CSV Processing
csv = "1"

# ZIP Archive
zip = { version = "7", default-features = false, features = ["deflate"] }

# Error handling
anyhow = "1"

# CAP Agent Core Library (local dependency) - no server features needed
cap-agent = { path = "../agent", default-features = false }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
